# SpOCK

./: CMakeLists.txt  README.md  annotated.html  annotated_dup.js  app_8h_source.html  classCoordinateType.html  classParallelExecutionContext-members.html  classParallelExecutionContext.html  classParallelExecutionContext.js  classSatelliteType.html  classapp_1_1execution-members.html  classapp_1_1execution.html  classapp_1_1execution.js  classapp_1_1propagation__forces-members.html  classapp_1_1propagation__forces.html  classapp_1_1propagation__forces.js  classes.html  classspock_1_1force__calculator-members.html  classspock_1_1force__calculator.html  classspock_1_1force__calculator.js  classspock_1_1gravity_1_1model_1_1perfect__sphere-members.html  classspock_1_1gravity_1_1model_1_1perfect__sphere.html  classspock_1_1gravity_1_1model_1_1perfect__sphere.js  conanfile.txt  dir_140ec0bdc5909b5c443b844429282599.html  dir_140ec0bdc5909b5c443b844429282599.js  dir_362ae733eab3e6e42528fb0af57a29c0.html  dir_44005672dc7c3e9f088d14edf6481614.html  dir_44005672dc7c3e9f088d14edf6481614.js  dir_46de7983135917337cb1a027e259efe3.html  dir_46de7983135917337cb1a027e259efe3.js  dir_4770094f17f7dbc6154e66f306cac3bf.html  dir_4770094f17f7dbc6154e66f306cac3bf.js  dir_4a2c4dfd925f922463bca80976e64025.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6c89d1ed406002b4e6ebce07fb51a507.html  dir_74acfde5a689602f306c4d631b1cea5c.html  (+213 more)
.github/workflows/: cmake.yml  release-drafter.yml
doc/: CMakeLists.txt  customdoxygen.css  main-page.md  mainpage.md
doc/api/: annotated.html  classes.html  dir_80e5431e2c14281a39eac6757a6cb02b.html  files.html  functions_func.html  graph_legend.html  namespacemembers.html  namespacemembers_vars.html  namespacespock_1_1physic__constant.html  options_8h_source.html  structPropagator-members.html  utils_8h_source.html
doc/api/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  classes_0.js  functions_0.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_3.js  variables_4.js
include/spock_lib/: gravity.h  orbit.h  physic_constant.hpp  physic_constants.hpp  spice.h  spock.h  version.h
include/spock_lib/force_calculator/: force_calculator.h
include/spock_lib/gravity/: gridded_gravity.h  j1_term_only.h  perfect_sphere.h  simple_sphere.h  spherical_harmonics.h
include/spock_lib/orbit/: orbital_elements.h
include/spock_lib/spice/: utils.h
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  namespaces_1.js  namespaces_2.js  (+10 more)
src/: CMakeLists.txt  app.h  main.cpp  options.h  parallel_execution.h  physic_constant.hpp  sequential_execution.h  utils.h
src/legacy/charlesbv/: CMakeLists.txt
src/legacy/charlesbv/spock/: makeall.sh
src/legacy/charlesbv/spock/Examples/: plot_output.py  read_input_file.py  read_output_file.py
src/legacy/charlesbv/spock/src/: ancas.c  close_approach_ensemble.c  generate_ephemerides.c  generate_ephemerides.h  interpolate_positions.c  main.cpp  moat_prototype.h  spock_odtk_ensemble_new_iteration_on_rv.py  utils.c  write_output.c
tests/: CMakeLists.txt
tests/data/: spock.config
tests/unit_test/: gravity_field_test.cpp  orbital_elements_test.cpp
